# rok-auth

./: Cargo.toml  README.md  publish.sh  roadmap.md
docs/: commands.md  dev.md  phase-01-core-authentication.md  phase-02-user-authentication.md  phase-03-two-factor-auth.md  phase-04-oauth-integration.md  phase-05-email-verification.md  phase-06-rbac-advanced.md  phase-07-api-polish.md  phase-08-rate-limiting-security.md  phase-09-cli-commands.md  progress.md
public/: style.css
rok-auth/: Cargo.toml
rok-auth-macros/: Cargo.toml
rok-auth-macros/src/: lib.rs
rok-auth/src/: claims.rs  config.rs
rok-auth/src/password/: hash.rs  mod.rs
rok-auth/src/providers/: mod.rs
rok-auth/src/services/: mod.rs  oauth.rs
rok-auth/src/tokens/: pair.rs
rok-auth/src/web/axum/: extractor.rs
src/: builders.rs  error.rs  jwt.rs  jwt_strict.rs  lib.rs  main.rs  utils.rs
src/authorization/: audit.rs  mod.rs  permissions.rs  policies.rs  roles.rs
src/providers/: trait_.rs
src/security/: blacklist.rs  cors.rs  csrf.rs  detection.rs  device.rs  headers.rs  health.rs  mod.rs  rate_limiter.rs  step_up.rs  webhook.rs
src/services/: mod.rs  oauth.rs  session.rs  totp.rs
src/services/email/: mod.rs  reset.rs  sender.rs  templates.rs  verification.rs
src/session/: mod.rs  token.rs
src/tokens/: abilities.rs  mod.rs  refresh.rs
src/web/: mod.rs
src/web/axum/: error.rs  guard.rs  layer.rs  mod.rs
templates/: home.html  layout.html
