[package]
name = "rok-auth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Rok Authors"]
repository = "https://github.com/rok/rok-auth"
homepage = "https://github.com/rok/rok-auth"
description = "JWT authentication and RBAC for the rok ecosystem"
keywords = ["auth", "jwt", "rbac", "rok"]
categories = ["authentication", "web-programming"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rok-auth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
rok-auth-macros = { path = "rok-auth-macros" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hmac-sha1 = "0.2"
sha1 = "0.4"
base32 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
