[package]
name = "rok-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Rok Authors"]
repository = "https://github.com/ateeq1999/rok-auth"
homepage = "https://github.com/ateeq1999/rok-auth"
documentation = "https://docs.rs/rok-auth"
description = "JWT authentication, RBAC, OAuth, 2FA, and rate limiting for Rust"
keywords = ["auth", "jwt", "rbac", "axum"]
categories = ["authentication", "web-programming::http-server"]
readme = "README.md"
exclude = ["docs/", "templates/", "public/"]

[lib]
name = "rok_auth"
path = "src/lib.rs"

[[bin]]
name = "rok-auth"
path = "src/main.rs"

[dependencies]
rok-auth-macros = { version = "0.1.0", path = "rok-auth-macros" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sha1 = "0.10"
base32 = "0.5"
hex = "0.4"
hmac = "0.12"
digest = "0.10"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
regex = "1.10"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
