[package]
name = "rok-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JWT authentication and RBAC for the rok ecosystem"
keywords = ["auth", "jwt", "rbac", "rok"]
categories = ["authentication", "web-programming"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
sqlx.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tokio.workspace = true
